examples/IC022118/EPrint/exp.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | ID ASSIGN expression '\n'

    5 expression: expression '+' term
    6           | term

    7 term: term '*' factor
    8     | factor

    9 factor: NUMBER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'*' (42) 7
'+' (43) 5
error (256)
NUMBER (258) 9
ID (259) 4
ASSIGN (260) 4


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
input (10)
    on left: 1 2, on right: 0 2
line (11)
    on left: 3 4, on right: 2
expression (12)
    on left: 5 6, on right: 4 5
term (13)
    on left: 7 8, on right: 5 6 7
factor (14)
    on left: 9, on right: 7 8


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end  shift, and go to state 2
    ID    shift, and go to state 3
    '\n'  shift, and go to state 4

    line  go to state 5


State 2

    0 $accept: input $end .

    $default  accept


State 3

    4 line: ID . ASSIGN expression '\n'

    ASSIGN  shift, and go to state 6


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

    2 input: input line .

    $default  reduce using rule 2 (input)


State 6

    4 line: ID ASSIGN . expression '\n'

    NUMBER  shift, and go to state 7

    expression  go to state 8
    term        go to state 9
    factor      go to state 10


State 7

    9 factor: NUMBER .

    $default  reduce using rule 9 (factor)


State 8

    4 line: ID ASSIGN expression . '\n'
    5 expression: expression . '+' term

    '\n'  shift, and go to state 11
    '+'   shift, and go to state 12


State 9

    6 expression: term .
    7 term: term . '*' factor

    '*'  shift, and go to state 13

    $default  reduce using rule 6 (expression)


State 10

    8 term: factor .

    $default  reduce using rule 8 (term)


State 11

    4 line: ID ASSIGN expression '\n' .

    $default  reduce using rule 4 (line)


State 12

    5 expression: expression '+' . term

    NUMBER  shift, and go to state 7

    term    go to state 14
    factor  go to state 10


State 13

    7 term: term '*' . factor

    NUMBER  shift, and go to state 7

    factor  go to state 15


State 14

    5 expression: expression '+' term .
    7 term: term . '*' factor

    '*'  shift, and go to state 13

    $default  reduce using rule 5 (expression)


State 15

    7 term: term '*' factor .

    $default  reduce using rule 7 (term)
